...
    return Scaffold(
      drawer: Drawer(
        child: ListView(
          children: [
            if (authState is! SignedInState)
              ListTile(
                key: const Key('signInTile'),
                leading: Icon(Icons.logout),
                title: Text("Sign in"),
                onTap: () {
                  context.pop();
                  context.go('/sign-in');
                },
...
              ),
              title: Text("Theme"),
              onTap: () => context.read<ThemeChangeNotifier>().changeTheme(),
            ),
            if (authState is SignedInState)
              ListTile(
                key: const Key('signOutTile'),
                leading: Icon(Icons.login),
                title: Text("Sign out"),
                onTap: () {
                  context.read<AuthCubit>().signOut();
                  context.pop();
                },
...
